[TIMELINEPAGE] switch between timelineview and agenda with ink transition done. Need fix little bug on firefox, change color. On timeline scroll need add background change depending on the event pointed.

--- a/ExpressApp1/public/stylesheets/css/timeline/agenda.css
+++ b/ExpressApp1/public/stylesheets/css/timeline/agenda.css
@@ -405,7 +405,7 @@ Main Components
 
 .schedule .event-modal .body-bg {
   z-index: 1;
-  background: white;
+  background: transparent;
   -webkit-transform-origin: top left;
       -ms-transform-origin: top left;
           transform-origin: top left;
